# shared-backend

./: pyproject.toml
source_code/shared_backend/api/: authenticate_user.py
source_code/shared_backend/data/shared/: recipe_enumerations.py
source_code/shared_backend/data/user_related/user/: user_data_model_handler.py
source_code/shared_backend/data/wallet_related/payout_method/: payout_method.py  payout_method_data_model_handler.py
source_code/shared_backend/data/wallet_related/transaction/: transaction.py  transaction_data_model_handler.py
source_code/shared_backend/data/wallet_related/wallet/: wallet.py  wallet_data_model_handler.py
source_code/shared_sprout_data/data/user_related/user/: user.py
