[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "shared-sprout-data"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pymongo>=4.9.2",
    "database-dimension"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["source_code/shared_sprout_data"]

[tool.uv.sources]
database-dimension = { path = "../../python-packages/database-dimension", editable = true }
